Check if the nick is still around before inserting last completion

BUG:256829